<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.example.eng_shady.MyResturant.activities.LoginActivity">

    <EditText
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:drawableEnd="@drawable/ic_action_login"
        android:drawablePadding="5dp"
        android:enabled="false"
        android:text="@string/Login"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|normal" />

    <EditText
        android:id="@+id/txtLoginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txtEmailerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txtLoginemail"
        />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/LogIn_Fragment_Til_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLoginemail"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtLoginpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/txtPasserror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="15sp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/txtLoginpass"
            />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bgbtn_login"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|normal" />

    <TextView
        android:id="@+id/txtforget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:linksClickable="true"
        android:text="@string/PassForget"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btncreateAccount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/BtnLogin"
        android:layout_below="@+id/txtforget"
        android:layout_marginTop="16dp"
        android:background="@drawable/bgbtn"
        android:text="@string/SignUp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|normal" />

</RelativeLayout>

