<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    tools:context="com.example.eng_shady.MyResturant.fragments.FoodMenuFragment">




    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme">


        <android.support.design.widget.TabLayout
            android:id="@+id/FoodMenutabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"


            >

            <android.support.design.widget.TabItem


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FoodMenu" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Comments" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ResturantInfo" />


        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.view.ViewPager

        android:id="@+id/FoodMenuViewPagger"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />
</FrameLayout>
