<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eng_shady.MyResturant.fragments.SignUpFragment">


    <EditText
        android:id="@+id/TxtRegisterName"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="544dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/Name"
        android:padding="5dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TxtRegisterEmail"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="488dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TxtRegisterPhone"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="436dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:padding="5dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">


        <Spinner
            android:id="@+id/spRegisterCountry"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:src="@drawable/ic_arrow"
            android:background="@drawable/spinner"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">


        <Spinner
            android:id="@+id/spRegistertown"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@drawable/spinner"
            android:src="@drawable/ic_arrow"
            />

    </LinearLayout>


    <EditText
        android:id="@+id/TxtRegisterHome"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginBottom="252dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/Address"
        android:inputType="textMultiLine"
        android:padding="5dp"

        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TxtRegisterPass"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:padding="5dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/TxtRegisterPassConfirm"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:hint="@string/PassConfirm"
        android:inputType="numberPassword"
        android:padding="5dp"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCliRegister"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#3C9B27"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

